--- a/spreadsheet_processor/templates/spreadsheet_processor/base.html
+++ b/spreadsheet_processor/templates/spreadsheet_processor/base.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'upload_spreadsheet' %}">Spreadsheet Processor</a>
+            <a class="navbar-brand" href="{% url 'spreadsheet_list' %}">Spreadsheet Processor</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -19,7 +19,7 @@
                         <a class="nav-link" href="{% url 'upload_spreadsheet' %}">Upload</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'report_list' %}">Reports</a>
+                        <a class="nav-link" href="{% url 'spreadsheet_list' %}">Spreadsheets</a>
                     </li>
                 </ul>
             </div>
