--- a/spreadsheet_processor/templates/spreadsheet_processor/spreadsheet_list.html
+++ b/spreadsheet_processor/templates/spreadsheet_processor/spreadsheet_list.html
@@ -16,8 +16,8 @@
                 <div class="card mb-4">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <div>
-                            <h5 class="mb-0">Spreadsheet {{ spreadsheet.id }}</h5>
-                            <small class="text-muted">Uploaded at: {{ spreadsheet.uploaded_at }}</small>
+                            <h5 class="mb-0">{{ spreadsheet.file.name }}</h5>
+                            <small class="text-muted">Uploaded at: {{ spreadsheet.uploaded_at|date:"F j, Y, g:i a" }}</small>
                         </div>
                         <form method="post" action="{% url 'download_spreadsheet_reports' spreadsheet.id %}">
                             {% csrf_token %}
